--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "andy-portfolio",
+  "name": "amanda-portfolio",
   "version": "2.0.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.1.9",
     "ajv": "^8.11.0",
     "classnames": "^2.2.6",
+    "eslint": "^8.5.0",
     "firebase": "^9.17.2",
     "moment": "^2.29.4",
     "node-forge": ">=1.3.0",
@@ -21,12 +22,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles": "^2.9.3",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.54.5",
     "tsparticles": "^2.9.3",
-    "typescript": "^4.7.4",
-    "eslint": "^8.5.0"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
